[package]
name = "cyberspace_navigator"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = [] }
bevy-async-task = "1.3.1"
bevy_mod_picking = "0.17.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.10"
cryptoxide = "0.4.4"
nostro2 = "0.1.10"
primitive-types = "0.12.2"
serde = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["rt"] }

