[package]
name = "cyberspace_navigator"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.release]
opt-level = 'z'

[dependencies]
bevy = { version = "0.12.1", features = [] }
bevy-async-task = "1.3.1"
bevy_mod_picking = "0.17.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.10"
cryptoxide = "0.4.4"
# nostro2 = "0.1.10"
primitive-types = "0.12.2"
serde = "1.0.194"
serde_json = "1.0.110"
textwrap = "0.16.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "22cfca6c974641ba7c50e72d19b30aa44769b304" }


